# torsearch

./: README.md
cli/: .last_data
cli/assets/: torsearch_logo_apple.icns
cli/torsearch/: README.md  __main__.py  pyproject.toml  requirements.txt
cli/torsearch/src/: .last_data  cli.py  config.yaml  constants.py  torSearch.py
cli/torsearch/src/tors/: __init__.py  __main__.py  cli.py  tors.py
cli/torsearch/src/tors/utils/: config.py  downloader.py  extractor.py
cli/torsearch/src/torsearch/: .last_data  __init__.py  __main__.py  cli.py  torSearch.py
cli/torsearch/src/torsearch/utils/: browser.py  cleaner.py  downloader.py  extractor.py
cli/torsearch/src/utils/: browser.py  cleaner.py  downloader.py  extractor.py
cli/torsearch/tests/: test_torSearch.py
